[tool.poetry]
name = "repl_python3_emelia-bot-1"
version = "0.1.0"
description = ""
authors = ["arifgotbug <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
discord = "^1.7.3"
discord-py-slash-command = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
